# book-library

./: .env  .gitignore  Dockerfile  db.sqlite3  mypy.ini  pyproject.toml  requirements.txt
book_library/: asgi.py  settings.py  urls.py  wsgi.py
book_library/middlewares/: special_request_middleware.py  test_middle_ware.py
books/: admin.py  apps.py  inject.py  models.py  urls.py
books/book/: inject.py
books/book/data/: book_abstract_repo.py  book_db_repo.py
books/book/domain/: domain_models.py
books/book/domain/use_cases/: filter_books_by_genre_use_case.py  filter_books_by_name_use_case.py  list_all_books_use_case.py
books/book/presentation/: types.py  urls.py  views.py
books/book/tests/: factories.py
books/book/tests/data/: test_db_repo.py
books/book/tests/use_cases/: test_filter_books_by_genre_use_case.py  test_list_all_book_use_case.py
books/book_items/: exceptions.py  inject.py
books/book_items/data/: book_item_abstract_repo.py  book_item_db_repo.py
books/book_items/domain/: domain_models.py
books/book_items/domain/use_cases/: lend_book_item_use_case.py  list_book_items_use_case.py  list_borrowed_books.py
books/book_items/presentation/: types.py  urls.py  views.py
books/book_items/tests/data/: test_book_item_repo.py
books/migrations/: 0001_initial.py  0002_bookitem.py  0003_delete_bookitem.py  0004_bookitems.py  0005_bookitems_book_item_id.py  0006_alter_bookitems_options.py
library_auth/: apps.py  models.py  token_authentication.py  views.py
library_auth/migrations/: 0001_initial.py
static/app_static/: static_file.txt
